WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254103
[WebGPU] copyTextureToTexture does not work with compressed formats
https://bugs.webkit.org/show_bug.cgi?id=254103
Summary
[WebGPU] copyTextureToTexture does not work with compressed formats
Mike Wyrzykowski
Reported
2023-03-17 21:27:17 PDT
[WebGPU] copyTextureToTexture does not work with compressed formats
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-17 21:28:22 PDT
<
rdar://problem/106887775
>
Mike Wyrzykowski
Comment 2
2023-03-17 22:05:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11674
EWS
Comment 3
2023-03-20 10:29:39 PDT
Committed
261880@main
(f6ed3474524d): <
https://commits.webkit.org/261880@main
> Reviewed commits have been landed. Closing PR #11674 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug