[WebGPU] copyTextureToTexture does not work with compressed formats https://bugs.webkit.org/show_bug.cgi?id=254103 <radar://106887775>

Reviewed by Tadeu Zagallo.

Texture::isValidImageCopySource / isValidImageCopyDestination are only supposed
to be called on depth or stencil formats. They do not return expected values
except for depth formats.

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::validateWriteTexture):
Only validate if this is a depth format.

* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::isValidDepthStencilCopySource):
(WebGPU::Texture::isValidDepthStencilCopyDestination):
Assert this is a depth or stencil format.

Canonical link: https://commits.webkit.org/261880@main